--- a/frontend/myplaylist.html
+++ b/frontend/myplaylist.html
@@ -39,8 +39,19 @@
     </div>  
 </header>
 <!----------------->
-<div id="playlist-container"></div>
+<!-- <div id="filter">
+    <select id="filterDropdown">
+        <option value="all">All</option>
+        <option value="true">Public</option>
+        <option value="false">Private</option>
+    </select> -->
 
+
+
+<div id="playlist-container">
+    
+</div>
+<!-- </div> -->
 
 
 <!---Footer-->
