--- a/frontend/myplaylist.html
+++ b/frontend/myplaylist.html
@@ -39,19 +39,19 @@
     </div>  
 </header>
 <!----------------->
-<!-- <div id="filter">
+<div id="filter">
     <select id="filterDropdown">
-        <option value="all">All</option>
-        <option value="true">Public</option>
-        <option value="false">Private</option>
-    </select> -->
+        <option value="all">All Playlist</option>
+        <option value="true">Public Playlist</option>
+        <option value="false">Private Playlist</option>
+    </select>
 
 
 
 <div id="playlist-container">
     
 </div>
-<!-- </div> -->
+</div>
 
 
 <!---Footer-->
