--- a/frontend/list.html
+++ b/frontend/list.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="style/list.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
         <link rel="icon" href="images/logo/e.png">
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <title>ReelQuest</title>
     </head>
 <body>
